# mandelbrot

./: CMakeLists.txt  conanfile.txt  mandelbrot.cpp
